data/forge_javadoc/1.9.4/raw/net/minecraft/client/model/ModelBoat.md
---
title: "ModelBoat"
description: "public class ModelBoat extends ModelBase implements IMultipassModel"
package: "net/minecraft/client/model"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/client/model/ModelBoat.html"
sourceType: javadoc
---

# ModelBoat

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelBoat

## Class signature

```java
public class ModelBoat extends ModelBase implements IMultipassModel
```

## Constructors

- `ModelBoat()`

## Methods

- `void render(Entity entityIn, float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch, float scale)`
- `void renderMultipass(Entity p_187054_1_, float p_187054_2_, float p_187054_3_, float p_187054_4_, float p_187054_5_, float p_187054_6_, float scale)`
- `void setRotationAngles(float limbSwing, float limbSwingAmount, float ageInTicks, float netHeadYaw, float headPitch, float scaleFactor, Entity entityIn)`

## Fields

- `ModelRenderer [] boatSides`
- `ModelRenderer noWater`
- `ModelRenderer [] paddles`
